--- a/start.ini
+++ b/start.ini
@@ -5,9 +5,17 @@ http=0.0.0.0:40000
 chdir=/Users/simonws/project/music_seperate_demucs
 #python 启动程序文件
 wsgi-file=run_seperate.py
+
 #python 程序内用以启动的application 变量名
 callable=app
 #处理器数
-processes=2
+processes=1
 #线程数
-threads=10
+threads=5
+harakiri=3600
+http-timeout=3600
+buffer-size=220000000
+socket-timeout=3600
+ignore-sigpipe = true
+ignore-write-errors = true
+disable-write-exception = true
