--- a/start.ini
+++ b/start.ini
@@ -12,10 +12,10 @@ callable=app
 processes=1
 #线程数
 threads=5
-harakiri=3600
-http-timeout=3600
+harakiri=3600000
+http-timeout=3600000
 buffer-size=220000000
-socket-timeout=3600
+socket-timeout=3600000
 ignore-sigpipe = true
 ignore-write-errors = true
 disable-write-exception = true
