--- a/start.ini
+++ b/start.ini
@@ -2,6 +2,7 @@
 #uwsgi启动时，所使用的地址和端口
 http=0.0.0.0:40000
 #指向网站目录
+#chdir=root/music_seperate_demucs
 chdir=/Users/simonws/project/music_seperate_demucs
 #python 启动程序文件
 wsgi-file=run_seperate.py
