--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,13 @@ mypy
 openunmix
 pyyaml
 submitit
-torch>=1.8.1
+#torch>=1.8.1
 torchaudio>=0.8,<2.2
 tqdm
 treetable
 soundfile>=0.10.3
 flask>=3.0.3
-uwsgi>=2.0.21
+#uwsgi>=2.0.21
 werkzeug
 requests
 
