--- a/start.ini
+++ b/start.ini
@@ -1,6 +1,8 @@
 [uwsgi]
+#uid=music
+#gid=music
 #uwsgi启动时，所使用的地址和端口
-http=0.0.0.0:40000
+http=0.0.0.0:8080
 #指向网站目录
 chdir=/root/music_seperate_demucs
 #chdir=/Users/simonws/project/music_seperate_demucs
@@ -24,3 +26,9 @@ home=/root/seperate
 #uid=1000
 #gid=1000
 #chmod-socket=660
+
+
+#socket =/root/music_seperate_demucs/test_nginx.sock
+#socket =127.0.0.1:40001
+#chmod-socket =660
+vacuum = true
