--- a/start.ini
+++ b/start.ini
@@ -2,10 +2,12 @@
 #uid=music
 #gid=music
 #uwsgi启动时，所使用的地址和端口
-http=0.0.0.0:8080
+#40000
+#8080
+http=0.0.0.0:40000
 #指向网站目录
-chdir=/root/music_seperate_demucs
-#chdir=/Users/simonws/project/music_seperate_demucs
+#chdir=/root/music_seperate_demucs
+chdir=/Users/simonws/project/music_seperate_demucs
 #python 启动程序文件
 wsgi-file=run_seperate.py
 
@@ -22,7 +24,7 @@ socket-timeout=3600000
 ignore-sigpipe = true
 ignore-write-errors = true
 disable-write-exception = true
-home=/root/seperate
+# home=/root/seperate
 #uid=1000
 #gid=1000
 #chmod-socket=660
