--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,32 @@
 # please make sure you have already a pytorch install that is cuda enabled!
 dora-search>=0.1.12
 diffq>=0.2.1
-einops
+einops~=0.8.0
 flake8
 hydra-colorlog>=1.1
 hydra-core>=1.1
 julius>=0.2.3
 lameenc>=1.2
-museval
+museval~=0.4.1
 mypy
-openunmix
-pyyaml
+openunmix~=1.3.0
+pyyaml~=6.0.2
 submitit
 #torch>=1.8.1
 torchaudio>=0.8,<2.2
-tqdm
-treetable
+tqdm~=4.66.5
+treetable~=0.2.5
 soundfile>=0.10.3
 flask>=3.0.3
 NumPy==1.26.4
 #uwsgi>=2.0.21
 werkzeug
-requests
+requests~=2.32.3
 
 
-
+torch~=2.1.2
+demucs~=4.0.1
+musdb~=0.4.2
+omegaconf~=2.3.0
+setuptools~=75.1.0
+schedule~=1.2.2
